Fixed overflow bug

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -36,11 +36,11 @@
 
 html {
   scroll-behavior: smooth;
-  //overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 body {
   background-color: $background-color;
   font-family: var(--font-radio-canada);
-  //overflow-x: hidden;
+  overflow-x: hidden;
 }
