--- a/src/components/MoonFrame/MoonFrame.module.scss
+++ b/src/components/MoonFrame/MoonFrame.module.scss
@@ -29,7 +29,7 @@
 
   @media (max-width: 768px) {
     top: 20%;
-    left: -200%;
+    left: -200vw;
   }
 
   @media (max-width: 1440px) {
